--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,12 @@
   border-bottom: 1px ridge;
   min-height:400px;
 }
-
+.row-content2 {
+  margin:0px auto;
+  padding: 50px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height:100 px;
+}
 .footer{
   background-color: #D1C4E9;
   margin:0px auto;
